--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,177 @@
-:root{
-    --primary-color :#FF6C00; /*основной цвет сайта, использ. для кнопок и рамочек*/
-    --secondary-color :#191C26;
+:root {
+    --primary-color: #FF6C00;
+    /*основной цвет сайта, использ. для кнопок и рамочек*/
+    --secondary-color: #191C26;
 
-    --text-primary :#303030;
-    --text-secondary :#9DA4BD;
+    --text-primary: #303030;
+    --text-secondary: #9DA4BD;
+    --text-primary-lighten: #555;
 }
 
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     background-color: aquamarine;
 }
 
-h2.section-title{
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+}
+
+a {
+    text-decoration: none;
+}
+.suptitle-secondary{
+color: rgba(157, 164, 189, 0.6);
+}
+.suptitle-secondary, .suptitle-primary{
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 15px;
+    color: var(text-primary);
+    
+}
+
+h2.section-title {
     font-family: 'Raleway';
     font-weight: bold;
-    font-size: 42px;;
+    font-size: 42px;
+    ;
     color: var(--text-primary);
 
 }
 
-h2.section-title.lighten{
+h2.section-title.lighten {
     color: #fff;
 }
+
+.hero-description {
+    color: var(--text-secondary);
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+
+}
+nav.navbar{
+    outline: 2px solid red;
+}
+nav.navbar .btn-box{
+    display: inline-block;
+}
+
+.nav-links{
+    outline: 2px solid blue;
+    display: inline-block;
+}
+.nav-links li {
+    display: inline-block;
+}
+
+a.nav-link {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    color: #fff;
+}
+
+a.nav-link:hover, .social-link:hover {
+    color: var(--primary-color);
+}
+p.section-description {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--text-primary-lighten);
+}
+
+.social-link {
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 15px;
+    color: var(--text-primary);
+}
+
+.primary-btn {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.09em;
+    text-transform: uppercase;
+    border: 1px solid #FF6C00;
+    border-radius: 25px;
+    box-sizing: border-box;
+    padding: 12px 20px;
+    color: #fff;
+}
+
+.primary-btn.darken {
+    color: var(--text-primary);
+}
+
+/* Price styles */
+
+.price-list {
+    display: inline-block;
+
+}
+
+.price-item p,
+.price-item span {
+    display: inline-block;
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--text-secondary);
+}
+
+/* Why us styles */
+
+ .number-box {
+     width: 170px;
+     height: 132px;
+     background: #F7F7F7;
+     display: inline-block;
+ }
+
+ .number-box p,
+ .number-box span {
+     display: block;
+     font-weight: bold;
+     font-size: 42px;
+     line-height: 57px;
+     color: var(--text-primary);
+ }
+
+ .number-box span {
+     font-weight: normal;
+     font-size: 11px;
+     line-height: 15px;
+     
+ }
+
+ /* Masters styles */
+
+ .master-card p{
+    font-size: 18px;
+        line-height: 25px;
+        color: var(--text-primary);
+
+ }
+
+ .master-card span {
+     font-size: 14px;
+     line-height: 19px;
+     text-align: center;
+    color: #FF6C00;
+  
+
+ }
+/* Footer styles */
+
+ .footer-contacts{
+font-weight: normal;
+    font-size: 18px;
+    line-height: 30px;
+    color: var(--text-secondary);
+ }
