--- a/css/style.css
+++ b/css/style.css
@@ -7,40 +7,42 @@
     --text-secondary: #9DA4BD;
     --text-primary-lighten: #555;
 }
+*{
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: aquamarine;
+    margin: 0;
 }
 
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
-
 }
 
 a {
     text-decoration: none;
 }
-.suptitle-secondary{
-color: rgba(157, 164, 189, 0.6);
+
+.suptitle-secondary {
+    color: rgba(157, 164, 189, 0.6);
 }
-.suptitle-secondary, .suptitle-primary{
+
+.suptitle-secondary,
+.suptitle-primary {
     font-weight: 600;
     font-size: 11px;
     line-height: 15px;
     color: var(text-primary);
-    
 }
 
 h2.section-title {
     font-family: 'Raleway';
     font-weight: bold;
     font-size: 42px;
-    ;
     color: var(--text-primary);
-
 }
 
 h2.section-title.lighten {
@@ -52,21 +54,48 @@ h2.section-title.lighten {
     font-weight: normal;
     font-size: 18px;
     line-height: 30px;
-
 }
-nav.navbar{
+
+.header {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh;
+    width: 100%;
+}
+
+nav.navbar {
+    display: flex;
+    width: 100%;
     outline: 2px solid red;
-}
-nav.navbar .btn-box{
-    display: inline-block;
+    
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    padding: 30px 55px 0 55px;
+    
 }
 
-.nav-links{
-    outline: 2px solid blue;
-    display: inline-block;
+.logo-img {
+    width: 68px;
+    height: 56px;
+    margin: 0 32px;
 }
+
+.nav-holder {
+    display: flex;
+    align-items: center;
+    height: 56px;
+}
+
+nav.navbar .btn-box {}
+
+.nav-links {
+    display: flex;
+   
+}
+
 .nav-links li {
-    display: inline-block;
+    margin: 0 40px;
 }
 
 a.nav-link {
@@ -76,9 +105,15 @@ a.nav-link {
     color: #fff;
 }
 
-a.nav-link:hover, .social-link:hover {
+a.nav-link:hover,
+.social-link:hover {
     color: var(--primary-color);
 }
+
+.section-box{
+    padding: 130px 55px;
+}
+
 p.section-description {
     font-weight: normal;
     font-size: 18px;
@@ -94,6 +129,7 @@ p.section-description {
 }
 
 .primary-btn {
+    display: inline-block;
     font-weight: 600;
     font-size: 12px;
     line-height: 16px;
@@ -110,11 +146,40 @@ p.section-description {
     color: var(--text-primary);
 }
 
+.slider {
+    width: calc(100% - 155px);
+    background-image: url('../images/Slider/Slider\ img\ 3.jpg');
+    
+}
+
+.sidebar{
+    width: 155px;
+    height: 100vh;
+    background-color: #fff;
+}
+
+.section-box{
+    display: flex;
+    justify-content: space-between;
+}
+
+.about_image-box{
+    display: flex;
+    justify-content: space-between;
+    width: 48%;
+}
+
+.about_image-box img{
+    
+    width: 48%;
+}
+.description-container {
+    width: 48%;
+}
 /* Price styles */
 
 .price-list {
     display: inline-block;
-
 }
 
 .price-item p,
@@ -127,51 +192,47 @@ p.section-description {
 
 /* Why us styles */
 
- .number-box {
-     width: 170px;
-     height: 132px;
-     background: #F7F7F7;
-     display: inline-block;
- }
+.number-box {
+    width: 170px;
+    height: 132px;
+    background: #F7F7F7;
+}
 
- .number-box p,
- .number-box span {
-     display: block;
-     font-weight: bold;
-     font-size: 42px;
-     line-height: 57px;
-     color: var(--text-primary);
- }
+.number-box p,
+.number-box span {
+    display: block;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 57px;
+    color: var(--text-primary);
+}
 
- .number-box span {
-     font-weight: normal;
-     font-size: 11px;
-     line-height: 15px;
-     
- }
+.number-box span {
+    font-weight: normal;
+    font-size: 11px;
+    line-height: 15px;
+}
 
- /* Masters styles */
+/* Masters styles */
 
- .master-card p{
+.master-card p {
     font-size: 18px;
-        line-height: 25px;
-        color: var(--text-primary);
+    line-height: 25px;
+    color: var(--text-primary);
+}
 
- }
-
- .master-card span {
-     font-size: 14px;
-     line-height: 19px;
-     text-align: center;
+.master-card span {
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
     color: #FF6C00;
-  
+}
 
- }
 /* Footer styles */
 
- .footer-contacts{
-font-weight: normal;
+.footer-contacts {
+    font-weight: normal;
     font-size: 18px;
     line-height: 30px;
     color: var(--text-secondary);
- }
+}
