--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ p.section-description {
 
 .slider {
     width: calc(100% - 155px);
-    background-image: url('../images/Slider/Slider\ img\ 3.jpg');
+    background-image: url('../images/Slider/Slider_img_3.jpg');
     
 }
 
