--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,19 @@ a {
     line-height: 15px;
     color: var(text-primary);
 }
+.suptitle-primary::before,
+.suptitle-secondary::before{
+  content: '';  
+  display: inline-block;
+  width: 60px;
+  height: 1px;
+  margin-right: 20px;
+  vertical-align: middle;
+  background: rgba(157, 164, 189, 0.6);
+}
+.suptitle-primary::before{
+    background: rgba(48, 48, 48, 1);
+}
 
 h2.section-title {
     font-family: 'Raleway';
@@ -62,6 +75,7 @@ h2.section-title.lighten {
     height: 100vh;
     width: 100%;
 }
+
 
 nav.navbar {
     display: flex;
