--- a/css/style.css
+++ b/css/style.css
@@ -76,16 +76,18 @@ h2.section-title.lighten {
     width: 100%;
 }
 
+/* Navbar */
 
 nav.navbar {
     display: flex;
     width: 100%;
     outline: 2px solid red;
-    
+    padding-top: 30px;
     justify-content: space-between;
     position: fixed;
     top: 0;
     padding: 30px 55px 0 55px;
+    box-sizing: border-box;
     
 }
 
@@ -93,6 +95,7 @@ nav.navbar {
     width: 68px;
     height: 56px;
     margin: 0 32px;
+    fill: rgba(48, 48, 48, 1);
 }
 
 .nav-holder {
@@ -105,7 +108,6 @@ nav.navbar .btn-box {}
 
 .nav-links {
     display: flex;
-   
 }
 
 .nav-links li {
@@ -125,6 +127,7 @@ a.nav-link:hover,
 }
 
 .section-box{
+    
     width: 100%;
     padding: 130px 55px;
 }
@@ -241,12 +244,17 @@ p.section-description {
 }
 
 .number-box span {
-    font-weight: normal;
+    font-style: normal;
+    font-weight: 600;
     font-size: 11px;
     line-height: 15px;
 }
 
 /* Masters styles */
+
+.master-box{
+    background-color: rgba(247, 247, 247, 1);
+}
 .masters-list{
     display: flex;
     justify-content: space-between;
@@ -263,6 +271,30 @@ p.section-description {
     line-height: 19px;
     text-align: center;
     color: #FF6C00;
+}
+
+.master-social-box{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 90px;
+    margin-top: 30px;
+
+}
+
+.master-social-link{
+    width: 44px;
+    height: 44px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.master-social-link svg{
+   fill: rgba(48, 48, 48, 1);
+    height: 20px;
 }
 
 /* Footer styles */
