--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,14 @@
     --text-secondary: #9DA4BD;
     --text-primary-lighten: #555;
 }
-*{
-    box-sizing: border-box;
-}
 
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+}
+
+*{
+    box-sizing: border-box;
 }
 
 ul {
@@ -26,7 +27,17 @@ a {
     text-decoration: none;
 }
 
+@keyframes infiniteRotate{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .suptitle-secondary {
+   
     color: rgba(157, 164, 189, 0.6);
 }
 
@@ -81,7 +92,7 @@ h2.section-title.lighten {
 nav.navbar {
     display: flex;
     width: 100%;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
     padding-top: 30px;
     justify-content: space-between;
     position: fixed;
@@ -94,8 +105,10 @@ nav.navbar {
 .logo-img {
     width: 68px;
     height: 56px;
-    margin: 0 32px;
     fill: rgba(48, 48, 48, 1);
+    animation-name: infiniteRotate;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
 }
 
 .nav-holder {
@@ -104,7 +117,7 @@ nav.navbar {
     height: 56px;
 }
 
-nav.navbar .btn-box {}
+/* nav.navbar .btn-box {} */
 
 .nav-links {
     display: flex;
@@ -163,6 +176,8 @@ p.section-description {
     box-sizing: border-box;
     padding: 12px 20px;
     color: #fff;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 .primary-btn.darken {
@@ -171,8 +186,10 @@ p.section-description {
 
 .slider {
     width: calc(100% - 155px);
-    background-image: url('../images/Slider/Slider_img_3.jpg');
-    
+    background-image: linear-gradient(450deg, rgb(0 0 0 / 21%), #000), url('../images/Slider/Slider_img_3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .sidebar{
@@ -181,11 +198,21 @@ p.section-description {
     background-color: #fff;
 }
 
+/* .section-box{
+    display: flex;
+    justify-content: space-between;
+}  */
 .section-box{
+    padding: 130px 55px;
+}
+.about-section{
     display: flex;
     justify-content: space-between;
 }
+.master-box{
 
+    justify-content: space-between;
+}
 .about_image-box{
     display: flex;
     justify-content: space-between;
@@ -200,14 +227,33 @@ p.section-description {
     width: 48%;
 }
 /* Price styles */
-
+.price-section{
+    background-image: url(../images/Price/bg.png);
+    background-color: rgba(17, 19, 25, 1);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.price-box{
+    display: flex;
+    margin-bottom: 30px;
+}
 .price-list {
     display: flex;
+    width: 49%;
+    flex-wrap: wrap;
 }
-
+.price-list:nth-child(odd){
+background: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+.price-list:nth-child(even) {
+    background: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
+}
 .price-item{
     display: flex;
+    align-items: center;
     width: 100%;
+    padding: 0 40px;
     justify-content: space-between;
 }
 .price-item p,
@@ -241,6 +287,7 @@ p.section-description {
     font-size: 42px;
     line-height: 57px;
     color: var(--text-primary);
+    text-align: center;
 }
 
 .number-box span {
@@ -253,12 +300,14 @@ p.section-description {
 /* Masters styles */
 
 .master-box{
+   
     background-color: rgba(247, 247, 247, 1);
-}
+} 
 .masters-list{
     display: flex;
     justify-content: space-between;
     flex-basis: 300px;
+    text-align: center;
 }
 .master-card p {
     font-size: 18px;
@@ -292,16 +341,181 @@ p.section-description {
     justify-content: center;
 }
 
+/* .master-social-link::before,
+.master-social-link::after{
+content: '';
+position: absolute;
+width: 24px;
+height: 24px;
+background-image: url();
+} */
+.master-social-link:hover svg,
+.master-social-link:focus svg{
+fill:var(--primary-color);
+}
+
 .master-social-link svg{
    fill: rgba(48, 48, 48, 1);
     height: 20px;
 }
 
-/* Footer styles */
+/*Gallery section*/
 
+.image-gallery{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.gallery-card{
+    position: relative;
+    overflow: hidden;
+    width: 20%;
+}
+.gallery-card img{
+    width: 100%;
+}
+.gallery-description{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0/ 75%);
+    color: #fff;
+    padding: 20px;
+    position: absolute;
+    bottom: -100%;
+    transition: transform .3s linear;
+    }
+
+    .gallery-card:hover .gallery-description{
+        transform: translateY(-100%);
+    }
+
+
+/* Footer styles */
+.footer{
+    display: flex;
+    width: 100%;
+    min-height: 640px;
+    height: auto;
+    padding: 0 50px;
+    background-color: var(--secondary-color); 
+    background-image: url(../images/Footer/footer-bg.png);
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
+    background-position: right top;
+    color: var(--text-secondary);
+}
+.footer-form-box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
+.footer-form, .footer-contacts{
+    width: 50%;
+    height: inherit;
+    padding-right: 50px;
+}
+
+.footer-form .form-field{
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9da4bd60;
+    outline: none;
+    margin-bottom: 40px;
+    width: 100%;
+    color: #fff;
+}
+
+.footer-form .field-label{
+    position: relative;
+    display: inline-block;
+    width: calc(50% - 15px);
+}
+
+.field-label:hover .form-field,
+.footer-form .form-field:focus{
+border-color: #fff;
+}
+
+
+.footer-form .field-label legend{
+    transition: translate, .1s linear;
+    position: absolute;
+    top: -3px;
+    color: #9da4bd60;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
+}
+.field-label:hover legend{
+    color: #fff;
+}
+.footer-form .form-field:focus + legend{
+    transform: translate(-2px, -24px);
+    color: #fff;
+}
+
+textarea.form-field{
+    display: block;
+    width: 100%;
+    resize: none;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    }
+
+textarea.form-field::placeholder{
+color: #9da4bd60;
+text-transform: uppercase;
+font-family: 'Open Sans', sans-serif;
+font-weight: 600;
+
+        }
 .footer-contacts {
+   padding: 130px 105px 130px 100px;
     font-weight: normal;
     font-size: 18px;
     line-height: 30px;
     color: var(--text-secondary);
+}
+.contacts-box{
+    padding-left: 40px;
+}
+
+.contacts-box > adress{
+    position: relative;
+}
+.contacts-box > adress::before,
+.contacts-box > a::before{
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    left: -41px;
+    top: 3px;
+}
+.contacts-box > adress::before{
+    background-image: url(../images/Icons/map-pin.svg);
+}
+.contacts-box a:nth-of-type(1)::before{
+   background-image: url(../images/Icons/phone.svg);
+}
+.contacts-box a:nth-last-of-type(1)::before{
+    background-image: url(../images/Icons/mail.svg);
+
+}
+.contacts-box > a{
+    position: relative;
+    display: block;
+    color: var(--text-secondary);
+}
+.copyright{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+    width: 100%;
+    min-height: 125px;
+    height: auto;
+    background-color: #fff;
 }
